deployments/kafka/templates/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    istio-injection: enabled
