deployments/kafka/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
  labels:
    name: kafka  
spec:
  ports:
    - port: 9093
      targetPort: 9092
  selector:
    name: kafka
